# Cambridge-text-generator

./: .gitignore  CMakeLists.txt  README.md  Source-text.txt  main.cpp
inc/: funcs.hpp
src/: funcs.cpp  main.cpp
txt/: Source-text.txt
